--- a/cip/CipServer/packages/custom/cipmanager/public/views/userlist.html
+++ b/cip/CipServer/packages/custom/cipmanager/public/views/userlist.html
@@ -3,7 +3,8 @@
     <fieldset>
         <!-- Show -->
         <legend>条件列表</legend>
-        <table class="table table-hover" ng-if="crowdDetail.selector.ontology.length>0 || crowdDetail.selector.behavior.length>0 || crowdDetail.selector.tag.length>0">
+        <table class="table table-hover"
+               ng-if="crowdDetail.selector.ontology.length>0 || crowdDetail.selector.behavior.length>0 || crowdDetail.selector.tag.length>0">
             <thead>
             <tr>
                 <th>序号</th>
@@ -14,16 +15,19 @@
             <tbody>
             <tr data-ng-repeat="condition in crowdDetail.selector.tag">
                 <td>{{$index+1}}</td>
-                <td>{{condition_type[0].name}}:&nbsp;&nbsp;<b>{{condition.name}} {{condition.operator}} {{condition.factor}}</b></td>
+                <td>{{condition_type[0].name}}:&nbsp;&nbsp;<b>{{condition.name}} {{condition.operator}}
+                    {{condition.factor}}</b></td>
                 <td>{{condition.count}}</td>
             </tr>
             <tr data-ng-repeat="condition in crowdDetail.selector.ontology">
                 <td>{{$index+1+crowdDetail.selector.tag.length}}</td>
                 <td ng-if="condition.operator!='dislike' && condition.operator!='like'">
-                    {{condition_type[1].name}}:&nbsp;&nbsp;对<b>{{condition.name}}</b>之<b>{{condition.factor}}</b>的兴趣的权重 <b>{{condition.operator}} {{condition.weight}}</b>
+                    {{condition_type[1].name}}:&nbsp;&nbsp;对<b>{{condition.name}}</b>之<b>{{condition.factor}}</b>的兴趣的权重
+                    <b>{{condition.operator}} {{condition.weight}}</b>
                 </td>
                 <td ng-if="condition.operator=='dislike' || condition.operator=='like'">
-                    {{condition_type[1].name}}:&nbsp;&nbsp;对<b>{{condition.name}}</b>之<b>{{condition.factor}}</b>的兴趣为 <b>{{condition.operator}}</b>
+                    {{condition_type[1].name}}:&nbsp;&nbsp;对<b>{{condition.name}}</b>之<b>{{condition.factor}}</b>的兴趣为
+                    <b>{{condition.operator}}</b>
                 </td>
                 <td>{{condition.count}}</td>
             </tr>
@@ -31,12 +35,17 @@
                 <td>{{$index+1+crowdDetail.selector.tag.length+crowdDetail.selector.ontology.length}}</td>
                 <td>
                     {{condition_type[2].name}}:&nbsp;&nbsp;<b>{{condition.action}}</b>&nbsp;<b>{{condition.objectCategory}}</b>
-                    <nobr ng-if="condition.objectType=='Category'">&nbsp;&nbsp;位于<b>{{condition.ontologyType}}/{{condition.objectId}}</b>目录下</nobr>
-                    <nobr ng-if="condition.objectType=='Contains'">&nbsp;&nbsp;包含字段<b>{{condition.ontologyType}}/{{condition.objectId}}</b></nobr>
+                    <nobr ng-if="condition.objectType=='Category'">&nbsp;&nbsp;位于<b>{{condition.ontologyType}}/{{condition.objectId}}</b>目录下
+                    </nobr>
+                    <nobr ng-if="condition.objectType=='Contains'">&nbsp;&nbsp;包含字段<b>{{condition.ontologyType}}/{{condition.objectId}}</b>
+                    </nobr>
                     <nobr ng-if="condition.objectType=='Item'">&nbsp;&nbsp;物品ID=<b>{{condition.objectId}}</b></nobr>
                     &nbsp;&nbsp;发生次数 <b>{{condition.operator}} {{condition.value}}</b>次
-                    <nobr ng-if="condition.timeType=='absolute'">&nbsp;&nbsp;在日期<b>{{condition.startTime | date:'shortDate'}}</b>到<b>{{condition.endTime | date:'shortDate'}}</b>内</nobr>
-                    <nobr ng-if="condition.timeType=='relative'">&nbsp;&nbsp;在过去<b>{{condition.startTime/86400000}}</b>天内</nobr>
+                    <nobr ng-if="condition.timeType=='absolute'">&nbsp;&nbsp;在日期<b>{{condition.startTime |
+                        date:'shortDate'}}</b>到<b>{{condition.endTime | date:'shortDate'}}</b>内
+                    </nobr>
+                    <nobr ng-if="condition.timeType=='relative'">&nbsp;&nbsp;在过去<b>{{condition.startTime/86400000}}</b>天内
+                    </nobr>
                 </td>
                 <td>{{condition.count}}</td>
             </tr>
@@ -48,39 +57,45 @@
 
     <fieldset>
         <legend>用户列表明细</legend>
-        <div class="col-md-6">
-        <table class="table table-hover table-bordered" ng-if="userList.length>0">
-            <thead>
-            <tr>
-                <th>序号</th>
-                <th>UID</th>
-                <th>操作</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr data-ng-repeat="user in userList">
-                <td>{{$index+1}}</td>
-                <td>{{user}}</td>
-                <td>
+        <div class="text-center row" ng-if="!userList.length || userList.length<=0">
+            <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>数据正在获取中...
+        </div>
+        <div class="col-md-offset-3 col-md-6">
+            <table class="table table-hover table-bordered" ng-if="userList.length>0">
+                <thead>
+                <tr>
+                    <th>序号</th>
+                    <th>UID</th>
+                    <th>操作</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr data-ng-repeat="user in userList">
+                    <td>{{$index+1}}</td>
+                    <td>{{user}}</td>
+                    <td>
                     <span>
                         <button class="btn btn-info btn-xs">探索此用户
                         </button>
                     </span>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </fieldset>
 
-    <div class="col-md-offset-2 row" ng-if="userList.length>0">
-        <uib-pagination boundary-links="true" total-items="userCount" ng-model="currentUserListPage" class="pagination-sm" ng-change="pageUserListChanged()"
-                        previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;" items-per-page="page_size">
+    <div class="text-center row" ng-if="userList.length>0">
+        <uib-pagination boundary-links="true" total-items="userCount" ng-model="currentUserListPage"
+                        class="pagination-sm" ng-change="pageUserListChanged()"
+                        previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"
+                        items-per-page="page_size">
 
         </uib-pagination>
     </div>
-    <div class="col-md-2">
-        <a target="_self" id="downloadUserlist" href="/api/download?file={{crowdDetail.file}}" download="userlist.xml" class="btn btn-info btn-block" ng-if="userList.length>0">下载UID集合</a>
+    <div class="col-md-offset-5 col-md-2">
+        <a target="_self" id="downloadUserlist" href="/api/download?file={{crowdDetail.file}}" download="userlist.xml"
+           class="btn btn-info btn-block" ng-if="userList.length>0">下载UID集合</a>
 
     </div>
 </section>
