--- a/cip/CipServer/packages/custom/cipmanager/public/views/createGroup.html
+++ b/cip/CipServer/packages/custom/cipmanager/public/views/createGroup.html
@@ -7,9 +7,10 @@
                 <label mean-token="'create-group_name'" class="col-md-2 control-label">人群组合名称</label>
                 <div class="col-md-4">
                     <input name="group_name" type="text" class="form-control" data-ng-model="groupDetail.crowdName"
-                           id="group_name" placeholder="Group Name" required>
-                    <div ng-show="submitted && groupForm.crowd_name.$invalid" class="help-block">
-                        <p ng-show="groupForm.crowd_name.$error.required">Crowd name is required</p>
+                           id="group_name" placeholder="Group Name" ng-pattern="/^\w+$/" required>
+                    <div ng-show="groupForm.group_name.$invalid" class="help-block">
+                        <p ng-show="groupForm.group_name.$error.required" class="text-danger">人群名字不能为空</p>
+                        <p ng-show="!groupForm.group_name.$error.required" class="text-danger">人群名称只能包含英文,数字,或下划线</p>
                     </div>
                 </div>
             </div>
@@ -18,8 +19,8 @@
                 <div class="col-md-4">
                     <input name="description" type="text" class="form-control" data-ng-model="groupDetail.description"
                            id="description" placeholder="Description" required>
-                    <div ng-show="submitted && groupForm.description.$invalid" class="help-block">
-                        <p ng-show="groupForm.description.$error.required">Description is required</p>
+                    <div ng-show="groupForm.description.$invalid" class="help-block">
+                        <p ng-show="groupForm.description.$error.required" class="text-danger">描述不能为空</p>
                     </div>
                 </div>
             </div>
