--- a/cip/CipServer/packages/custom/cipmanager/public/views/groupUserlist.html
+++ b/cip/CipServer/packages/custom/cipmanager/public/views/groupUserlist.html
@@ -51,14 +51,9 @@
         </div>
     </fieldset>
 
-    <div class="col-md-offset-2 row">
-        <uib-pagination boundary-links="true" total-items="userCount" ng-model="currentUserListPage" class="pagination-sm" ng-change="pageUserListChanged()"
-                        previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;" items-per-page="page_size">
+    <div class="col-md-offset-5 col-md-2">
+        <a target="_self" id="downloadUserlist" href="/api/download?file={{groupDetail.file}}" download="userlist.xml"
+           class="btn btn-info btn-block" ng-if="userList.length>0 && groupDetail.type == 'static'">下载UID集合</a>
+    </div>
 
-        </uib-pagination>
-    </div>
-    <div class="col-md-2">
-        <a mean-token="'create-c-crowd'" target="_blank" href="/api/download/uid.csv" class="btn btn-info btn-block">下载UID集合
-        </a>
-    </div>
 </section>
