--- a/cip/CipServer/packages/custom/cipmanager/public/views/groupUserlist.html
+++ b/cip/CipServer/packages/custom/cipmanager/public/views/groupUserlist.html
@@ -26,28 +26,31 @@
 
     <fieldset>
         <legend>用户列表明细</legend>
-        <div class="col-md-6">
-        <table class="table table-hover table-bordered">
-            <thead>
-            <tr>
-                <th>序号</th>
-                <th>UID</th>
-                <th>操作</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr data-ng-repeat="user in userList">
-                <td>{{$index+1}}</td>
-                <td>{{user}}</td>
-                <td>
-                        <span>
-                          <button class="btn btn-info btn-xs">探索此用户
-                          </button>
-                        </span>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+        <div class="text-center row" ng-if="!userList.length || userList.length<=0">
+            <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>数据正在获取中...
+        </div>
+        <div class="col-md-offset-3 col-md-6">
+            <table class="table table-hover table-bordered" ng-if="userList.length>0">
+                <thead>
+                <tr>
+                    <th>序号</th>
+                    <th>UID</th>
+                    <th>操作</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr data-ng-repeat="user in userList">
+                    <td>{{$index+1}}</td>
+                    <td>{{user}}</td>
+                    <td>
+                    <span>
+                        <button class="btn btn-info btn-xs">探索此用户
+                        </button>
+                    </span>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </fieldset>
 
