--- a/cip/CipServer/packages/custom/cipmanager/public/views/groupUserlist.html
+++ b/cip/CipServer/packages/custom/cipmanager/public/views/groupUserlist.html
@@ -26,11 +26,14 @@
 
     <fieldset>
         <legend>用户列表明细</legend>
-        <div class="text-center row" ng-if="!userList.length || userList.length<=0">
+        <div class="text-center row" ng-if="!userList && groupDetail.type == 'static'">
             <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>数据正在获取中...
         </div>
+        <div class="text-center row" ng-if="crowdDetail.type == 'dynamic'">
+            动态人群暂时不支持显示用户列表
+        </div>
         <div class="col-md-offset-3 col-md-6">
-            <table class="table table-hover table-bordered" ng-if="userList.length>0">
+            <table class="table table-hover table-bordered" ng-if="userList.length>0 && groupDetail.type == 'static'">
                 <thead>
                 <tr>
                     <th>序号</th>
