Add Auto redirect of main page

--- a/cip/CipServer/packages/core/system/public/views/index.html
+++ b/cip/CipServer/packages/core/system/public/views/index.html
@@ -1,4 +1,4 @@
-<section class="welcome container-fluid" data-ng-controller="IndexController">
+<section class="welcome container-fluid" data-ng-controller="IndexController" ng-init="initIndex()">
   <div class="col-md-12 first">
     CIP is a modern customer intelligence platform. With this platform, you can manage the crowds easily.
   </div>
