--- a/cip/CipServer/packages/custom/cipmanager/public/views/createGroup.html
+++ b/cip/CipServer/packages/custom/cipmanager/public/views/createGroup.html
@@ -77,7 +77,7 @@
         <div class="form-group">
             <div class="col-md-offset-4 col-md-3">
                 <button mean-token="'create-save'" type="submit"
-                        ng-disabled="groupForm.$invalid && groupDetail.count < 0" class="btn btn-success btn-block">
+                        ng-disabled="groupForm.$invalid || groupDetail.count < 0 || groupDetail.selector.length <= 0" class="btn btn-success btn-block">
                     保存组合
                 </button>
             </div>
