--- a/cip/cip_frontend/client/template/views/common/topnavbar.html
+++ b/cip/cip_frontend/client/template/views/common/topnavbar.html
@@ -11,7 +11,7 @@
         <ul class="nav navbar-top-links navbar-right">
             <li>
                 <a href="#login">
-                    <i class="fa fa-sign-out"></i> Log In
+                    <i class="fa fa-sign-in"></i> Log In
                 </a>
             </li>
         </ul>
