[CIP-56] Create UI components for View Crowd List.

--- a/cip/cip_frontend/client/template/views/main.html
+++ b/cip/cip_frontend/client/template/views/main.html
@@ -3,13 +3,11 @@
         <div class="col-lg-12">
             <div class="text-center m-t-lg">
                 <h1>
-                    {{main.helloText}}
+                    CIP is a modern customer intelligence platform. With this platform, you can manage the crowds easily.
                 </h1>
                 <small>
-                    {{main.descriptionText}}
+                    GraphSQL
                 </small>
-                <h1>||{{main.pageTitle}}||</h1>
-                <h1>{{$state.current.data.pageTitle}}</h1>
             </div>
         </div>
     </div>
