--- a/cip/cip_frontend/client/template/views/common/footer.html
+++ b/cip/cip_frontend/client/template/views/common/footer.html
@@ -1,8 +1,8 @@
 <div class="footer">
     <div class="pull-right">
-        10GB of <strong>250GB</strong> Free.
+        <!-- 10GB of <strong>250GB</strong> Free. -->
     </div>
-    <div>
+    <div class="pull-right">
         <strong>Copyright</strong> GraphSQL &copy; 2015-2016
     </div>
 </div>
