--- a/cip/cip_frontend/client/template/views/common/navigation.html
+++ b/cip/cip_frontend/client/template/views/common/navigation.html
@@ -30,16 +30,16 @@
                 <a href="index.html"><i class="fa fa-list"></i> <span class="nav-label">{{ 'CrowdManagement' | translate }}</span> <span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level collapse" ng-class="{in : true}">
                     <li ui-sref-active="active">
-                        <a ui-sref="index.crowd_view"><i class="fa fa-user"></i>{{'ViewCrowdList' | translate }}</a>
+                        <a ui-sref="crowd.crowd_view"><i class="fa fa-user"></i>{{'ViewCrowdList' | translate }}</a>
                     </li>
                     <li ui-sref-active="active">
-                        <a ui-sref="index.group_view"><i class="fa fa-users"></i>{{'ViewGroupList' | translate }}</a>
+                        <a ui-sref="crowd.group_view"><i class="fa fa-users"></i>{{'ViewGroupList' | translate }}</a>
                     </li>
                     <li ui-sref-active="active">
-                        <a ui-sref="index.crowd_create"><i class="fa fa-user-plus"></i>{{'CreateCrowd' | translate}}</a>
+                        <a ui-sref="crowd.crowd_create"><i class="fa fa-user-plus"></i>{{'CreateCrowd' | translate}}</a>
                     </li>
                     <li ui-sref-active="active">
-                        <a ui-sref="index.group_create"><i class="fa fa-google-plus"></i>{{'CreateGroup' | translate}}</a>
+                        <a ui-sref="crowd.group_create"><i class="fa fa-google-plus"></i>{{'CreateGroup' | translate}}</a>
                     </li>
                 </ul>
             </li>
