--- a/apps/src/app/app.component.html
+++ b/apps/src/app/app.component.html
@@ -1,4 +1,5 @@
-<h1>
-  {{title}}
-</h1>
-<app-header></app-header>
+<div id='wrapper'>
+  <app-header></app-header>
+  <app-stories></app-stories>
+  <app-foot></app-foot>
+</div>
