--- a/apps/src/app/header/header.component.html
+++ b/apps/src/app/header/header.component.html
@@ -1,3 +1,30 @@
-<p>
-  header works!
-</p>
+<header id="header">
+  <a class="home-link" href="/">
+    <img class="logo" src="https://cdn4.iconfinder.com/data/icons/social-messaging-productivity-1/128/play-icon-2-128.png">
+  </a>
+  <div class="header-text">
+    <div class="left">
+      <h1 class="name">
+        <a href="/">Angular 2 HN</a>
+      </h1>
+      <span class="header-nav">
+        <a href="">new</a>
+        <span class="divider">
+          |
+        </span>
+        <a href="">show</a>
+        <span class="divider">
+          |
+        </span>
+        <a href="">ask</a>
+        <span class="divider">
+          |
+        </span>
+        <a href="">jobs</a>
+      </span>
+    </div>
+    <div class="info">
+      Built with <a href="https://cli.angular.io/" target="_blank">Angular CLI</a>
+    </div>
+  </div>
+</header>
