--- a/apps/src/app/stories/item/item.component.html
+++ b/apps/src/app/stories/item/item.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="!item" class="loading-section">
   <!-- You can add a loading indicator here if you want to :) </i> -->
+  Loading Loading Loading Loading Loading Loading Loading Loading Loading Loading 
 </div>
 <div *ngIf="item">
   <div class="item-laptop">
@@ -28,5 +29,6 @@
     responsive mobile feel). Same attributes as above
     nothing really new here (but refer to the source
     file if you're interested) -->
+    m-mobile
   </div>
 </div>
