test case with router input.

--- a/apps/src/app/header/header.component.html
+++ b/apps/src/app/header/header.component.html
@@ -5,22 +5,23 @@
   <div class="header-text">
     <div class="left">
       <h1 class="name">
-        <a href="/">Angular 2 HN</a>
+        <a [routerLink]="['news', 1]">Angular 2 HN</a>
       </h1>
       <span class="header-nav">
-        <a href="">new</a>
+        <a [routerLink]="['newest', 1]">new</a>
+        <!-- <a href="/newest/1">new</a> -->
         <span class="divider">
           |
         </span>
-        <a href="">show</a>
+        <a [routerLink]="['show', 1]">show</a>
         <span class="divider">
           |
         </span>
-        <a href="">ask</a>
+        <a [routerLink]="['ask', 1]">ask</a>
         <span class="divider">
           |
         </span>
-        <a href="">jobs</a>
+        <a [routerLink]="['jobs', 1]">jobs</a>
       </span>
     </div>
     <div class="info">
