add test cases.

--- a/apps/src/app/header/header.component.html
+++ b/apps/src/app/header/header.component.html
@@ -5,7 +5,7 @@
   <div class="header-text">
     <div class="left">
       <h1 class="name">
-        <a [routerLink]="['news', 1]">Angular 2 HN</a>
+        <a [routerLink]="['news', 1]">Xiaoke Huang's News</a>
       </h1>
       <span class="header-nav">
         <a [routerLink]="['newest', 1]">new</a>
