Add click-out-side directive examples.

--- a/apps/src/app/header/header.component.html
+++ b/apps/src/app/header/header.component.html
@@ -4,7 +4,7 @@
   </a>
   <div class="header-text">
     <div class="left">
-      <h1 class="name">
+      <h1 class="name" appClickOutSide>
         <a [routerLink]="['news', 1]">Xiaoke Huang's News</a>
       </h1>
       <span class="header-nav">
