test the class overrider.

--- a/apps/src/app/foot/foot.component.html
+++ b/apps/src/app/foot/foot.component.html
@@ -1,7 +1,10 @@
-<div id="footer">
+<div id="footer" appClickOutSide>
     <p>Show this project some ❤ on
       <a href="" target="_blank">
-        GraphSQL
+        GraphSQL {{value2}} !
       </a>
+    </p>
+    <p class='testhost'>
+      Test host for something.
     </p>
 </div>
