--- a/apps/src/app/foot/foot.component.scss
+++ b/apps/src/app/foot/foot.component.scss
@@ -22,3 +22,12 @@ $mobile-only: "only screen and (max-width : 768px)";
     display: none;
   }
 }
+
+.testhost {
+  color: #f00;
+}
+
+:host(.testhost) {
+  color: #0f0;
+  background-color: darkgrey;
+}
