Check ths style out.

--- a/apps/src/app/app.component.html
+++ b/apps/src/app/app.component.html
@@ -2,5 +2,5 @@
   <app-header></app-header>
   <!-- <app-stories></app-stories> -->
   <router-outlet></router-outlet>
-  <app-foot></app-foot>
+  <app-foot class="testhost"></app-foot>
 </div>
