Add event binding in directive example.

--- a/apps/src/app/header/header.component.html
+++ b/apps/src/app/header/header.component.html
@@ -2,6 +2,7 @@
   <a class="home-link" href="/">
     <img class="logo" src="https://cdn4.iconfinder.com/data/icons/social-messaging-productivity-1/128/play-icon-2-128.png">
   </a>
+
   <div class="header-text">
     <div class="left">
       <h1 class="name" appClickOutSide (clickOutside)='test($event)'>
@@ -28,4 +29,5 @@
       Built with <a href="https://cli.angular.io/" target="_blank">Angular CLI</a>
     </div>
   </div>
+  <input appClickOutSide>
 </header>
