Add animation example.

--- a/apps/src/app/foot/foot.component.html
+++ b/apps/src/app/foot/foot.component.html
@@ -4,7 +4,7 @@
         GraphSQL {{value2}} !
       </a>
     </p>
-    <p class='testhost'>
+    <p class='testhost' [@State]='stateValue'>
       Test host for something.
     </p>
 </div>
