Set up the mouse move run out angular example.

--- a/apps/src/app/stories/item/item.component.html
+++ b/apps/src/app/stories/item/item.component.html
@@ -1,6 +1,6 @@
 <!-- item.component.html -->
 
-<div class="item-laptop">
+<div class="item-laptop" #container>
   <p>
     <a class="title" href="{{item.url}}">
       {{item.title}}
